{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 62,
  "lineage": "e1ac7b88-9edc-c95c-ee76-046584945265",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group/sg-0e822a941114d7a0e",
            "description": "This first terraform securtity group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e822a941114d7a0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform",
            "name_prefix": "",
            "owner_id": "322759042353",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Terraform"
            },
            "tags_all": {
              "Name": "SG-Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-921948e8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group/sg-084bead73507b5f61",
            "description": "Manage from terraform",
            "egress": [],
            "id": "sg-084bead73507b5f61",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.20.30.50/32"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "200.20.30.50/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "200.20.30.50/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform firewall",
            "name_prefix": "",
            "owner_id": "322759042353",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "app-security-group",
              "Security": "High"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "app-security-group",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-921948e8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group/sg-013b30c165205602a",
            "description": "Allow SSH from my IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013b30c165205602a",
            "ingress": [
              {
                "cidr_blocks": [
                  "163.116.214.93/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-ip-only-sg",
            "name_prefix": "",
            "owner_id": "322759042353",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-EC2"
            },
            "tags_all": {
              "Name": "SG-EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-921948e8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group-rule/sgr-0616924c43f130611",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0616924c43f130611",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e822a941114d7a0e",
            "security_group_rule_id": "sgr-0616924c43f130611",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SecurityGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group-rule/sgr-0d9b4196170ba3a7d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d9b4196170ba3a7d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e822a941114d7a0e",
            "security_group_rule_id": "sgr-0d9b4196170ba3a7d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SecurityGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group-rule/sgr-05ed6ba5290fc841a",
            "cidr_ipv4": "200.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-05ed6ba5290fc841a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-084bead73507b5f61",
            "security_group_rule_id": "sgr-05ed6ba5290fc841a",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group-rule/sgr-073ed4d9369bd8dbf",
            "cidr_ipv4": "200.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-073ed4d9369bd8dbf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-084bead73507b5f61",
            "security_group_rule_id": "sgr-073ed4d9369bd8dbf",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322759042353:security-group-rule/sgr-02eb67551df77511b",
            "cidr_ipv4": "200.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02eb67551df77511b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-084bead73507b5f61",
            "security_group_rule_id": "sgr-02eb67551df77511b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}